chore: correction elements' spacing

--- a/assets/stylesheet/donation.scss
+++ b/assets/stylesheet/donation.scss
@@ -45,6 +45,7 @@
 
   &__id-label {
     color: $color-txt-hint;
+    margin-bottom: 0.3rem;
   }
 
   &__id-value {
@@ -53,6 +54,6 @@
   }
 
   &__value-copy-btn {
-    margin-left: 0.8rem;
+    margin-left: 0.9rem;
   }
 }
