--- a/assets/stylesheet/forms.scss
+++ b/assets/stylesheet/forms.scss
@@ -61,7 +61,7 @@
     font-family: inherit;
     font-size: 1.6rem;
     line-height: 2.4rem;
-    background: url("/assets/images/Selector.svg") right 0.3rem center no-repeat;
+    background: url("/assets/images/Selector.svg") right 0.2rem center no-repeat;
     appearance: none;
 
     &:hover {
