--- a/assets/stylesheet/l-item.scss
+++ b/assets/stylesheet/l-item.scss
@@ -1,6 +1,6 @@
 .l-item {
-  margin-right: 3.2rem;
-  padding: 0.19rem 3.2rem 0.19rem 0;
+  margin-right: 3.0rem;
+  padding: 0 3.4rem 0 0;
   border-right: 1px solid $color-border;
 
   &__label {
