--- a/assets/stylesheet/menu.scss
+++ b/assets/stylesheet/menu.scss
@@ -30,7 +30,7 @@
   &__link {
     display: flex;
     align-items: center;
-    padding: 1.2rem 1.6rem;
+    padding: 1.1rem 1.6rem;
     color: $color-txt;
     text-decoration: none;
 
