--- a/assets/stylesheet/page.scss
+++ b/assets/stylesheet/page.scss
@@ -1,5 +1,5 @@
 .page {
-  max-width: 128rem;
+  max-width: 122.4rem;
   margin: 0 auto;
 
   &__header {
