--- a/assets/stylesheet/section.scss
+++ b/assets/stylesheet/section.scss
@@ -7,15 +7,16 @@
 
   &__head {
     padding: 3.2rem 0 0;
+    margin-bottom: 1.6rem;
     background: $color-white;
   }
 
   &__body {
-    padding: 2.8rem 3.2rem;
+    padding: 2.4rem 3.2rem;
   }
 
   &__footer {
-    padding: 1.6rem 3.2rem;
+    padding: 1.5rem 3.2rem;
     border-top: 1px solid $color-border;
     background: $color-bg-footer;
 
