--- a/assets/stylesheet/tab.scss
+++ b/assets/stylesheet/tab.scss
@@ -1,5 +1,5 @@
 .tab {
-  padding: 1.4rem 1.6rem 1.2rem;
+  padding: 1.5rem 1.75rem 1.2rem;
   font-size: 1.2rem;
   font-weight: bolder;
   text-transform: uppercase;
